1999-07-21  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* VarProbe.m ([VarProbe -createEnd]): Setup probedType
	for a variable in a Java obejct.

	* ProbeMap.m: Reformating.

1999-07-15  Alex Lancaster  <alex@santafe.edu>

	* CustomProbeMap.h (@interface): Make class conform to
	CustomProbeMap protocol.

	* CustomProbeMap.[hm] (addProbesWithIdentifers): New static function
	which parses the input list.
	([CustomProbeMap +create:forClass:withIdentifiers:): Use it.
	([CustomProbeMap -addProbesForClass:withIdentifiers:]): New
	method, likewise use addProbesWithIdentifiers function.
	
	* objectbase.h (CustomProbeMap): Document existing methods.  
	Add new SETTING method (addProbesForClass:withIdentifiers:) which
	allows post-create time addition of variables and method names via
	the list-delimiter form.

1999-07-09  Alex Lancaster  <alex@santafe.edu>

	* VarProbe.m (setFieldFromString): Protect Java-only static
	function with #ifdef HAVE_JDK.

	* CompleteProbeMap.m ([CompleteProbeMap -createEnd]): Move
	declaration of index and inversionList inside the #ifdef HAVE_JDK
	block, since they are only used in the Java case.

1999-07-09  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* CompleteProbeMap.m: Import directory.h and declare as extern global
	variables that are needed.
	([CompleteProbeMap -createEnd]): If probed class is Java class, then
	use JNI calls to initialize fields andd methods list of the class 
	and all of its the superclasses and corresponding probes.

	* CompleteVarMap.m: Import directory.h and declare as extern global
	variables that are needed.
	([CompleteVarMap -createEnd]): If probed class is Java class, then
	use JNI calls to initialize fields list of the class and all the 
	superclasses and corresponding probes.

	* DefaultProbeMap.m: Import directory.h and declare as extern global
	variables that are needed.
	([DefaultProbeMap -createEnd]): If probed class is Java class, then
	use JNI calls to initialize fields list and corresponding probes.
