@@ -11,7 +11,7 @@
 #include <misc.h> // strdup
 
 #ifdef HAVE_JDK
-#import "../defobj/directory.h" // java_ensure_selector
+#import "../defobj/directory.h" // swarm_directory_ensure_selector
 extern jclass c_Selector;
 extern jmethodID  m_ClassGetDeclaredFields,
   m_ClassGetDeclaredMethods, m_MethodGetName,
@@ -220,7 +220,7 @@ extern jmethodID  m_ClassGetDeclaredFields,
 
       unsigned i;
       numEntries = 0;
-      classObject = JFINDJAVA (jniEnv, probedClass);
+      classObject = SD_FINDJAVA (jniEnv, probedClass);
       if (!classObject)
 	raiseEvent (SourceMessage,
 		    "Java class to be probed can not be found!\n");      
@@ -282,7 +282,7 @@ extern jmethodID  m_ClassGetDeclaredFields,
 					       classObject,
 					       name,
                                                JNI_FALSE);
-	      sel = java_ensure_selector (jniEnv, selector);
+	      sel = swarm_directory_ensure_selector (jniEnv, selector);
 	      	      
 	      a_probe = [MessageProbe createBegin: [self getZone]];
 	      [a_probe setProbedClass: probedClass];
